# ROS2_Nav2_stage

./: .gitignore  README.md
maps/: frames_2025-08-20_10.19.10.gv  myfirstmap.pgm  myfirstmap.yaml
src/my_nav2/: package.xml  setup.cfg  setup.py
src/my_nav2/launch/: goal_pub.launch.py
src/my_nav2/my_nav2/: goal_pub.py  init_node.py
